# colima-desktop

./: .gitignore  CLAUDE.md  README.ko.md  README.md  install.sh  package-lock.json  package.json
.github/workflows/: release.yml
docs/superpowers/plans/: 2026-04-06-colima-desktop-mvp.md  2026-04-06-vm-settings.md  2026-04-07-liquid-glass-ui.md  2026-04-10-mdns-service-publishing.md
docs/superpowers/specs/: 2026-04-06-compose-grouping-design.md  2026-04-06-vm-settings-design.md  2026-04-07-devcontainer-integration-design.md  2026-04-10-mdns-service-publishing-design.md
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: crypto.rs  lib.rs  main.rs  tray.rs
src-tauri/src/cli/: executor.rs  types.rs
src-tauri/src/commands/: app_settings.rs  container.rs  devcontainer.rs  docker_project.rs  docker_settings.rs  env_secrets.rs  env_store.rs  image.rs  mdns.rs  mod.rs  mounts.rs  network.rs  network_settings.rs  onboarding.rs  project.rs  proxy.rs  update.rs  vm_settings.rs  volume.rs
src-tauri/src/mdns/: config.rs  manager.rs  mod.rs  sync.rs
src-tauri/src/proxy/: config.rs  gateway.rs  server.rs  sync.rs
src-tauri/tests/: proxy_ddauth_test.rs  proxy_test.rs
src/components/containers/: AddProjectDialog.tsx  ComposeGroup.tsx  ContainerDetail.tsx  ContainerDomainDialog.tsx  ContainerList.tsx  ContainerLogs.tsx  ContainerMdnsBadge.tsx  ContainerMdnsDialog.tsx  ContainerRow.tsx  ContainerRun.tsx  DevContainerGroup.tsx  ProjectDetail.tsx
src/components/devcontainer-config/: DevcontainerConfigEditor.tsx  PortsEnvTab.tsx
src/components/env/: EnvVarTable.tsx
src/components/environment/: GlobalEnvVarTable.tsx
src/components/images/: ImageList.tsx  ImagePull.tsx  ImageRow.tsx
src/hooks/: useAppSettings.ts  useColimaVersion.ts  useContainerDetail.ts  useContainers.ts  useDevcontainers.ts  useDockerProjects.ts  useDockerSettings.ts  useImages.ts  useMdns.ts  useMounts.ts  useNetworkSettings.ts  useNetworks.ts  useOnboarding.ts  useProjectConfig.ts  useVmSettings.ts  useVolumes.ts
src/lib/: tauri.ts
src/types/: index.ts
(+24 files in other folders)
