[package]
name = "colima-desktop"
version = "0.5.2"
description = "Colima Desktop - GUI for Colima"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "colima_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["process", "io-util"] }
serde_yaml = "0.9"
uuid = { version = "1", features = ["v4"] }
dirs = "6"
tauri-plugin-dialog = "2"
tauri-plugin-liquid-glass = "0"
image = { version = "0.25", default-features = false, features = ["png"] }
tempfile = "3"

[profile.release]
incremental = true

